# 2048-rust-app

./: Cargo.toml  Trunk.toml  trunk-index.html
src/: lib.rs  styles.css
tests/: wasm.rs
