[package]
name = "yew-app"
version = "0.1.1"
authors = ["Sheridan Kates <sheridan@glitch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.0"
wasm-bindgen = "0.2.67"
yew = {version = "0.17.4", services = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.19"